--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vue-directive-long-press": "^1.1.0",
     "vue-grid-layout": "^2.3.4",
     "vue-jcrop": "^1.0.3",
+    "vue-loading-overlay": "^3.4.0",
     "vue-long-click": "0.0.4",
     "vue-multipane": "^0.9.5",
     "vue-nav-tabs": "^0.5.7",
