--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "vue-slick-carousel": "^1.0.6",
     "vue-splitpane": "^1.0.4",
     "vue2-crop": "^1.0.2",
+    "vue2-dropzone": "^3.6.0",
     "vuebar": "0.0.20",
     "vuejs-clipper": "^1.1.0",
     "vuex": "^3.1.1",
